ФЗ 6. Итерация 1